• vogel-krypt/aes-s32.fig   · Das Schema für S_{32} des AES.
• vogel-krypt/aes-runde.fig
  · Das Schema für die Runden im AES

• vogel-krypt/skript.latex
  · Die Änderungen von heute.


git-svn-id: https://svn.lug-jena.de/uni-skripte@646 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -222,8 +222,6 @@
 \DeclareMathOperator{\ggT}{ggT}          % größter gemeinsamer Teiler
 \DeclareMathOperator{\kgV}{kgV}          % kleinstes gemeinsames Vielfaches
 \DeclareMathOperator{\card}{card}        % Kardinalität
-\DeclareMathOperator{\op}{op}            % eine beliebige, unbestimmte
-                                         % Operation
 
 \begin{document}
 
@@ -912,7 +910,7 @@ die erst im 19.\,Jahrhundert gebrochen wurde.
 
 \begin{table}
   \centering
-  \begin{minipage}{14cm}
+  \begin{minipage}{13.5cm}
     \ttfamily\footnotesize
     ~~~%
     \setcounter{cnt}{1}%
@@ -2290,8 +2288,7 @@ $k_{i}^{L}$.
   A^{*}$
 
   Tabelle: $A\in\{(1001), (1010), (1101), (1110)\}$ nun gilt weiter $k_{i}^{L}
-  = A\oplus \tilde{A} cmi\{ (1101), (1110), (1001), (1010)\}$
-  \help{Was ist cmi?}
+  = A\oplus \tilde{A} \in\{ (1101), (1110), (1001), (1010)\}$
 \end{bsp}
 
 Das war jetzt für einen Klartextblock, mit einem weitern Klartextblock kann
@@ -2638,7 +2635,7 @@ Beginn der neunziger Jahre des letzten Jahrhunderts in einer
 Gemeinschaftsarbeit von James Massey und Xueija Lai von der ETH~Zürich und der
 Ascom Systec~AG entwickelt. Die Ascom Systec~AG hält zum gegenwärtigen
 Zeitpunkt noch einige Patente für IDEA. Denoch wird der Algorithmus im
-PGP"~Verfahren eingesetzt.
+PGP-""Verfahren eingesetzt.
 \help{Stimmt es, dass IDEA in PGP verwendet wird?}
 
 IDEA arbeitet mit der Blocklänge von 64~Bit, einer Schlüssellänge von 128~Bit
@@ -2648,7 +2645,7 @@ wird ein Brute-Force-Angriff gegenüber DES wesentlich erschwert.
 \begin{figure}[ht]
   \centering
   \input{idea.pdf_t}
-  \caption{Blockschema für den Ablauf der $i$. Runde der IDEA"~Verschlüsselung}
+  \caption{Blockschema für den Ablauf der $i$. Runde der IDEA-""Verschlüsselung}
   \label{fig:idea}
 \end{figure}
 
@@ -2656,7 +2653,7 @@ Der Ablauf jeder Runde ist in \autoref{fig:idea} dargestellt. Jeder
 Klartextblock wird in vier Teilblöcke zu je 16~Bit zerlegt, die durch
 Verknüpfung mit 6~Rundenschlüsseln bzw. den Ergebnissen der Verknüpfungen in
 vier Teilblöcke von 16~Bit transformiert werden. Als Verknüpfung werden die
-drei Operationen Exklusives"~Oder~($\oplus$), Addition modulo~$2^{16}$~
+drei Operationen Exklusives-""Oder~($\oplus$), Addition modulo~$2^{16}$~
 ($\boxplus$) und Multiplikation modulo $2^{16}+1$~($\odot$) eingesetzt.
 
 % \begin{enumerate}
@@ -2699,7 +2696,7 @@ Runden sicher gegen lineare und differentielle Kryptoanalyse.\cite{idea-save}
 
 In den 1990ern wurden von Ronald Rivest von der RSA Data Security eine Reihe
 von Verschlüsselungsverfahren entwickelt, die als
-\highl[RC-Familie]{RC"~Familie} (Ron's Code oder Rivest's Cipher)
+\highl[RC-Familie]{RC-""Familie} (Ron's Code oder Rivest's Cipher)
 zusammengefasst werden.\cite[Abs.\,3.6.2--4]{rsafaq}
 
 \highl{RC2} bezeichnet eine Feistelchiffre, die mit 18~Runden und einer
@@ -2720,7 +2717,7 @@ Es gibt drei Operationen: Schlüsselerweiterung, Ver- und Entschlüsselung. Bei
 der Schlüsselerweiterung wird in Abhängigkeit von der Rundenanzahl eine
 Tabelle für die Ver"~/""Entschlüsselung erzeugt. Die Ver"~/""Entschlüsselung
 arbeitet mit Addition, exklusiven Oder und Bitrotation. Durch einen extrem
-einfachen Aufbau ist der RC5-Algorithmus leicht zu implementieren und zu
+einfachen Aufbau ist der RC5-""Algorithmus leicht zu implementieren und zu
 verifizieren.
 \begin{align*}
   x_{1}' &= rot(x_{1} \oplus x_{2}, x_{2}) \boxplus K_{1} &
@@ -2927,9 +2924,6 @@ abspeichern.
  \item Darstellung als zweistellige Hexadezimalzahl der Bitfolgen
 
   In unserem \autoref{bsp:1}: $57\odot 83 = C1$
-
-  Das Ergebnis lässt sich aus einer $256\times 256$-Tabelle ablesen.
-  \todo{Versuchen solch eine Tabelle aufzutreiben.}
 \end{enumerate}
 
 \subsection{Der erweiterte euklidische Algorithmus}
@@ -3059,6 +3053,7 @@ zu $p$ bezüglich~$\odot$.
 \end{bsp}
 
 \subsection{Polynome über dem Körper \texorpdfstring{$\F_{256}$}{F256}}
+\label{sec:f256x}
 
 Wir betrachten den Polynomring $\nicefrac{\F_{256}[x]}{(x^{4}+1)}$. Die
 Elemente sind Polynome höchstens dritten Grades.
@@ -3138,7 +3133,7 @@ und die Multiplikation $a\otimes b$ in zwei Schritten abläuft
          a_{3}& a_{0}& a_{1}& a_{2}\\
          a_{2}& a_{3}& a_{0}& a_{1}\\
          a_{1}& a_{2}& a_{3}& a_{0}
-       \end{pmatrix} :
+       \end{pmatrix} \cdot
        \begin{pmatrix}
          b_{3}\\
          b_{2}\\
@@ -3185,24 +3180,28 @@ mit dem Inversen $c^{-1}(x) = 0B x^{3} + 0D x^{2} + 09 x + 0E$
  \item[2002:] Rijndael wird als AES (FIPS) veröffentlich.
 \end{description}
 
-Bei AES ist auch der Hintergrund bekannt, wärend bei DES dies nicht war.
-(Diff-Kryptoanalyse war IBM seit 1970 bekannt) Man kann erklären, warum man
-die $S$-Boxen so gewählt hat und auch zeigen, dass sie korrekt arbeiten.
+Durch die Forderung, dass AES öffentlich seien soll, ist der mathematische
+Hintergrund für AES bekannt, wärend z.\,B. der Grund für die Wahl der
+$S$-Boxen bei DES unbekannt ist. --~IBM kannt bereits seit den 1970ern die
+differentielle Kryptoanalyse.~-- Damit ist auch für jederman nachprüfbar, dass
+AES korrekt arbeitet.
 
 \subsection{Bescheibung des Verfahrens von Rijndael}
 
 Das Verfahren von Rijndael ist eine iterierte Blockchiffre, deren Block- und
 Schlüssellänge unabhängig voneinander 128, 192 oder 256~Bit betragen können.
-Davon abhängig kann die Rundenzahl 10, 12 oder 14~Runden betragen. Das
+Davon abhängig ergibt sich die Rundenzahl als 10, 12 oder 14~Runden. Das
 Verfahren ist keine Feistel-Chiffre.
 
 \help{Was ist eine iterierte Blockchiffre?}
 \help{Warum ist Rijndael keine Feistel-Chiffre?}
 
-Für AES wurden 128~Bit als Blocklänge, 128~Bit als Schlüssellänge und
-10~Runden plus eine Abschlussrunde festgelegt. Der Schlüssel wird auf 1408~Bit
-erweitert und in 11~Teilschlüssel zu je 128~Bit zerlegt. Jede Runde (bis auf
-die Abschlussrunde) besteht aus vier Schichten (\autoref{fig:aes}):
+Für AES wurden 128~Bit als Blocklänge festgelegt, woraus sich 10~Runden für
+einen 128~Bit Schlüssel, 12~Runden bei einem 192~Bit Schlüssel und 14~Runden
+für einen 256~Bit langen Schlüssel ergeben. Aus dem Schlüssel werden
+$r+1$~Rundenschlüssel von je 128~Bit Länge erzeugt, wobei $r$ die Rundenzahl
+ist. Jede Runde bis auf die letzte besteht aus vier Schritten
+(\autoref{fig:aes}):
 \begin{enumerate}
  \item \highl{Key-Add} -- Verknüpfung mit dem Rundenschlüssel
  \item \highl{Byte-Sub} -- nicht lineare Transformation als Schutz vor
@@ -3210,8 +3209,8 @@ die Abschlussrunde) besteht aus vier Schichten (\autoref{fig:aes}):
  \item \highl{Shift-Row} -- zwischen Diffusion
  \item \highl{Mix-Column}
 \end{enumerate}
-In der Abschlussrunde wird statt dem Mix-Column-Schritt nochmal ein
-Key-Add-Schritt mit dem elften Schlüssel gemacht.
+In der letzten Runde wird statt dem Mix-Column-Schritt nochmal ein
+Key-Add-Schritt mit dem $(r+1)$.\,Schlüssel vorgenommen.
 
 % 20.12.
 
@@ -3219,14 +3218,14 @@ Key-Add-Schritt mit dem elften Schlüssel gemacht.
 
 Es werden Bytes von je 8~Bit verwendet, die somit als Elemente des Körpers
 $\F_{256}$ interprtiert werden können; $a=a_{7}a_{6}\dotso a_{0}\in\F_{256}$.
-Ein Eingabeblock~$s$ von 128~Bit Länge wird in eine Folge von 16~Bytes
+Ein Eingabeblock~$S$ von 128~Bit Länge wird in eine Folge von 16~Bytes
 zerlegt.
 \begin{gather*}
-  s = a^{(0)}a^{(1)}\dotso a^{(14)}a^{15}
+  S = a^{(0)}a^{(1)}\dotso a^{(14)}a^{(15)}
 \end{gather*}
-Diese Bytefolge wird auf eine $4\times4$-Matrix in folgender Weise übertragen:
+Diese Bytefolge wird auf eine $4\times4$-Matrix spaltenweise übertragen:
 \begin{gather*}
-  s =
+  S =
      \begin{pmatrix}
        a^{(0)}& a^{(4)}& a^{(8)}& a^{(12)}\\
        a^{(1)}& a^{(5)}& \dotso\\
@@ -3244,22 +3243,22 @@ Diese Bytefolge wird auf eine $4\times4$-Matrix in folgender Weise übertragen:
 
 \begin{figure}
   \centering
-  \todo{Bild vom Schema der Runde~$i$}
+  \input{aes-runde.pdf_t}
   \caption{Schema für die $i$.\,Runde des AES}
   \label{fig:aes}
 \end{figure}
 
 Die Eingabe des ersten Schritts (\highl{Key-Add}) in der $i$.\,Runde wird mit
-$s_{i,a}$ bezeichnet und das Ergebnis des ersten Schritts wird als Eingabe des
-zweiten Schritts (\highl{Byte-Sub}) verwendet und mit $s_{i,b}$ bezeichnet
+$S_{i,a}$ bezeichnet und das Ergebnis des ersten Schritts wird als Eingabe des
+zweiten Schritts (\highl{Byte-Sub}) verwendet und mit $S_{i,b}$ bezeichnet
 \begin{gather*}
-  s_{i,a} =
+  S_{i,a} =
      \begin{pmatrix}
        a^{(0,0)}& a^{(0,1)}& a^{(0,2)}& a^{(0,3)}\\
        \vdots &&& \vdots\\
        a^{(3,0)}& \hdotsfor{2} & a^{(3,3)}
      \end{pmatrix}
-     \qquad s_{i,b} =
+     \qquad S_{i,b} =
      \begin{pmatrix}
        b^{(0,0)}& b^{(0,1)}& b^{(0,2)}& b^{(0,3)}\\
        \vdots &&&\vdots \\
@@ -3267,40 +3266,54 @@ zweiten Schritts (\highl{Byte-Sub}) verwendet und mit $s_{i,b}$ bezeichnet
      \end{pmatrix}
 \end{gather*}
 Das Ergbnis des zweiten Schritts wird als Eingabe des dritten Schritts
-(\highl{Row-Shift}) verwendet und mit $s_{i,c}$ bezeichnet. Das Ergebnis des
+(\highl{Row-Shift}) verwendet und mit $S_{i,c}$ bezeichnet. Das Ergebnis des
 dritten Schritts wird als Eingabe für den vierten Schritt
-(\highl{Column-Mix}) verwendet und mit $s_{i,d}$ bezeichnet. Die
+(\highl{Column-Mix}) verwendet und mit $S_{i,d}$ bezeichnet. Die
 Ausgabe des vierten Schritts ist gleichzeitig die Ausgabe der $i$.\,Runde und
-somit wieder die Eingabe~$s_{i+1,a}$ für den ersten Schritt in der
+somit wieder die Eingabe~$S_{i+1,a}$ für den ersten Schritt in der
 $(i+1)$.\,Runde. siehe \autoref{fig:aes}
 
 Für die Elemente des Rings $\nicefrac{\F_{256}[x]}{x^{4}+1}$ verwendent man
 die Polynomdarstellung oder die Hexadezimalschreibweise
 \begin{gather*}
-  a(x) = 02 + 01x + 01x^{2}+03\quad\text{bzw.}\quad
-  a = [02, 01, 01, 03]
+  a(x) = 03x^{3} + 01x^{2} + 01x + 02\quad\text{bzw.}\quad a = [03, 01, 01, 02]
 \end{gather*}
 
 \subsection{Beschreibung der einzelnen Schritte}
 
+\help{Warum macht man das alles so kompliziert? Warum muss man das alles
+  mathematisch begründen? Man könnte doch die Abbildungen der S-Boxen zufällig
+  festlegen. Was hilft es, ständig den Körper/Ring ($\F_{256}$,
+  $\nicefrac{\F_{256}[x]}{x^{4}+1}$ $\nicefrac{\F_{2}[x]}{x^{8}+1}$) zu
+  wechseln? Warum wechselt man immer zwischen den Körpern/Ringen?}
+
 \subsubsection{Key-Add}
 Die Verknüpfung mit dem Rundenschlüssel, um die Ausgabe vom Schlüssel abhängig
-zu machen ist nicht weiter spektakulär:
+zu machen, ist nicht weiter spektakulär:
 \begin{gather*}
-  s_{i, b} = s_{i,a} \oplus k_{i}
+  S_{i, b} = S_{i,a} \oplus K_{i}
 \end{gather*}
 
 \subsubsection{Byte-Sub}
 
-Für jedes Byte $b^{(z,s)}\in\F_{256}$ der Eingabe $s_{i,b} =
+Für jedes Byte $b^{(z,s)}\in\F_{256}$ ($z,s\in\{0,\dotsc,3\}$) der Eingabe $S_{i,b} =
 (b^{(z,s)})_{4\times4}$ werden zwei Transformationen ausgeführt:
 \begin{enumerate}
- \item Bestimme das multiplikative Inverse $(b^{(z,s)})^{-1} =
-  \tilde{b}_{7}\tilde{b}_{6}\dotso\tilde{b}_{0}$ in $\F_{256}$.
-  Falls $b^{(z,s)}= 00$, dann $(b^{(z,s)})^{-1} = 00$.
+ \item Bestimme das multiplikative Inverse $(b^{(z,s)})^{-1} = \tilde{b}^{(z,s)}
+  \tilde{b}_{7}\tilde{b}_{6}\dotso\tilde{b}_{0}$ zu $b^{(z,s)}$ in $\F_{256}$.
+  Falls $b^{(z,s)}= 00$, dann ist $\tilde{b}^{(z,s)} = 00$.
 
- \item Berechne folgende affine Abbildung mit dem Ergebnis
-  $c^{(z,s)} = c_{7}c_{6}\dotso c_{0}$
+ \item Die Elementen des Körpers $F_{256}$ können auch als Elemente des
+  Polynomrings $\nicefrac{\F_{2}[x]}{x^{8}+1}$ verstanden werden, d.\,h.
+  \help{ist $\nicefrac{\F_{2}[x]}{x^{8}+1}$ isomorph zu $F_{256}$?}
+  $\tilde{b}^{(z,s)}\in\nicefrac{\F_{2}[x]}{x^{8}+1}$. Darauf wendet man folgende
+  Abbildung an:
+  \begin{gather*}
+    c^{(z,s)} = [1,1,1,1,0,0,0,1] \otimes \tilde{b}^{(z,s)} + [0,1,1,0,0,0,1,1]
+  \end{gather*}
+  Analog zu den Rechenregeln, wie sie im \autoref{sec:f256x} hergeleitet
+  wurden, ergibt sich folgende affine Abbildung mit dem Ergebnis $c^{(z,s)} =
+  c_{7}c_{6}\dotso c_{0}$
   \begin{gather*}
     \begin{pmatrix}
       c_{0}\\ c_{1}\\ c_{2}\\ c_{3}\\ c_{4}\\ c_{5}\\ c_{6}\\ c_{7}
@@ -3326,69 +3339,77 @@ Für jedes Byte $b^{(z,s)}\in\F_{256}$ der Eingabe $s_{i,b} =
          \tilde{b}_{7}
        \end{pmatrix} +
        \begin{pmatrix}
-         1\\ 1\\ 0\\ 0\\ 0\\ 1\\ 1
-       \end{pmatrix}
-  \end{gather*}
-
-  Bemerkung: Diese Abbildung kann als Abbildung über dem Polynomring
-  $\nicefrac{\F_{2}[x]}{x^{8}+1}$ verstanden werden.
-  \help{Ich verstehe diese Idee nicht. Woher kommt die Abbildung?}
-  \begin{gather*}
-    \begin{pmatrix}
-      c_{0}\\ c_{1}\\ c_{2}\\ c_{3}\\ c_{4}\\ c_{5}\\ c_{6}\\ c_{7}
-    \end{pmatrix}^{T}
-       =
-       \begin{pmatrix}
-         1& 1& 1& 1& 1& 0& 0& 0
-       \end{pmatrix}
-       \cdot
-       \begin{pmatrix}
-         \tilde{b}_{0}& \tilde{b}_{1}& \tilde{b}_{2}& \tilde{b}_{3}&
-         \tilde{b}_{4}& \tilde{b}_{5}& \tilde{b}_{5}& \tilde{b}_{6}&
-         \tilde{b}_{7}
-       \end{pmatrix}
-       +
-       \begin{pmatrix}
-         1& 1& 0& 0& 0& 1& 1& 0
+         1\\ 1\\ 0\\ 0\\ 0\\ 1\\ 1\\ 0
        \end{pmatrix}
   \end{gather*}
 \end{enumerate}
 
-Die praktische Umsetzung der Byte-Sub-Transformation erfolgt durch einen
-\highl{Table-lookup}, d.\,h. man berechnet einmal für alle möglichen Eingaben
+Die praktische Umsetzung der Byte-Sub-Transformation erfolgt durch eine
+\highl{lookup-table}, d.\,h. man berechnet einmal für alle möglichen Eingaben
 die Ergebnisse und speichert sie in einer Tabelle im Programm ab. Das Programm
 schlägt dann nur noch in der Tabelle das Ergebnis nach und berechnet nichts
 mehr.
 
-Zusammengefasst ist das Resultat
+\begin{table}
+  \centering
+  \begin{gather*}
+    \begin{array}{c|*{16}{c}}
+      S_{8}& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9& A& B& C& D& E& F\\
+      \hline
+      0& \\
+      1& \\
+      2& \\
+      3& \\
+      4& \\
+      5& \\
+      6& \\
+      7& \\
+      8& \\
+      9& \\
+      A& \\
+      B& \\
+      C& \\
+      D& \\
+      E& \\
+      F&
+    \end{array}
+  \end{gather*}
+  \todo{Tabelle ausfüllen; Im Internet suchen}
+  \caption{Die Substitutionsbox $S_{8}$ für den Byte-Sub-Schritt im AES}
+  \label{tab:s8-aes}
+\end{table}
+
+Die Tabelle ist die $S$-Box\footnote{da sie je 8~Bit verarbeitet, wird
+sie mit $S_{8}$ bezeichnet}, die z.\,B. zweidimensional mit 16~Zeilen und
+16~Spalten dargestellt werden kann. Die niederwertigen Bits $b_{3}, b_{2},
+b_{1}$ und $b_{0}$ der Eingabe bestimmen die Spalte in der Tabelle und die
+Bits $b_{7}, b_{6}, b_{5}$ und $b_{4}$ die Zeile. \autoref{tab:s8-aes}
+
+Beispiel: $S_{8}(1011\,0101)$, Zeile~11 und Spalte~5. \autoref{tab:s8-aes}
+liefert $D5$. $S_{8}(1011\,0101) = (1101\,0101)$.
+
+Zusammengefasst gesprochen, wird im Byte-Sub-Schritt mit einer Abbildung, der
+$S$-Box, für jedes Byte (jeden 8-Bit-Block) der Eingabe ein Byte bestimmt,
+dass dem inversen Element des Eingabebytes entspricht, wenn man beide als
+Elemente des Körpers $\F_{258}$ auffasst.
 \begin{gather*}
   c^{(z,s)} = S_{8}(b^{(z,s)})
 \end{gather*}
-\help{Woher kommt das $S_8$?}
-das in einer Tabelle ($16\times16$) dargestell werden kann. Die
-\help{Wieso verwendet man nicht eine eindimensionale Tabelle? Das ist doch nur
-  eine Frage der Anordnung.}
-niederwertigen Bits $b_{3}, b_{2}, b_{1}$ und $b_{0}$ bestimmen die
-Spalte der Tabelle und die Bits $b_{7}, b_{6}, b_{5}$ und $b_{4}$
-bestimmen die Zeile.
-
-Beispiel: $S_{8}(1011\,0101)$, Zeile~11 und Spalte~5. Die Tabelle
-liefert $D5$, d.\,h. 13 und 5. $S_{8}(1011\,0101) = (1101\,0101)$.
 
 \subsubsection{Row-Shift}
 Rechnen in $\nicefrac{\F_{256}[x]}{x^{4}+1}$ zeilenweise:
 \begin{align*}
   [d^{(0,0)}, d^{(0,1)}, d^{(0,2)}, d^{(0,3)}]
-     &= [c^{(0,0)}, c^{(0,1)}, c^{(0,2)}, c^{(0,3)}]\\
+     &= [c^{(0,0)}, c^{(0,1)}, c^{(0,2)}, c^{(0,3)}] \otimes 01x^{4}\\
   [d^{(1,0)}, d^{(1,1)}, d^{(1,2)}, d^{(1,3)}]
      &= [c^{(1,0)}, c^{(1,1)}, c^{(1,2)}, c^{(1,3)}] \otimes 01x^{3}\\
   [d^{(2,0)}, d^{(2,1)}, d^{(2,2)}, d^{(2,3)}]
      &= [c^{(2,0)}, c^{(2,1)}, c^{(2,2)}, c^{(2,3)}] \otimes 01x^{2}\\
   [d^{(3,0)}, d^{(3,1)}, d^{(3,2)}, d^{(3,3)}]
-     &= [c^{(3,0)}, c^{(3,1)}, c^{(3,2)}, c^{(3,3)}] \otimes 01 x
+     &= [c^{(3,0)}, c^{(3,1)}, c^{(3,2)}, c^{(3,3)}] \otimes 01x
 \end{align*}
 
-Praktisch bedeutet das, dass die Elemente in der $k$.\,Eingabezeile um $k-1$
+Praktisch bedeutet das, dass die Elemente in der $k$.\,Eingabezeile um $k$
 Plätze nach links rotiert werden.
 \begin{gather*}
   \begin{pmatrix}
@@ -3406,53 +3427,30 @@ Plätze nach links rotiert werden.
 \end{gather*}
 
 \subsubsection{Column-Mix}
-Spaltenweise wird die Abbildung $S_{32}$ auf die Element
+Auf die Eingabe $S_{i,d}$ wird spaltenweise die
+Abbildung~$S_{32}$\footnote{$S_{32}$, weil die Abbildung 32~Bit verarbeitet}
+angewendet.
 \begin{gather*}
   \begin{pmatrix}
-    d^{(0,s)} \\ d^{(1,s)}\\ d^{(2,s)}\\ d^{(3,s)}
-  \end{pmatrix} = S_{32}
+    e^{(0,s)} \\ e^{(1,s)}\\ e^{(2,s)}\\ e^{(3,s)}
+  \end{pmatrix} = S_{32}(
      \begin{pmatrix}
-       c^{(0,s)} \\ c^{(1,s)}\\ c^{(2,s)}\\ c^{(3,s)}
+       d^{(0,s)} \\ d^{(1,s)}\\ d^{(2,s)}\\ d^{(3,s)}
      \end{pmatrix}
+     )
 \end{gather*}
-
-\begin{figure}
-  % \input{aes-s32.pdf_t}
-  \caption{Bild von $S_{32}$}
-  \label{fig:s32}
-\end{figure}
-Beschreibung der Abbildung $S_{32}$ \autoref{fig:s32}
-
-\begin{gather*}
-  \mathit{xtime}(x_{7}x_{6}\dotso x_{0}) =
-     \begin{cases}
-       x_{6}x_{5}x_{4}x_{3}x_{2}x_{1}x_{0} 0&\colon x_{7}=0\\
-       (x_{6}x_{5}x_{4}x_{3}x_{2}x_{1}x_{0} 0) \oplus (0001\,1011)&
-       \colon x_{7} = 1
-     \end{cases}
-\end{gather*}
-
-kompakte Darstellung in $\nicefrac{\F_{2^{8}}[x]}{x^{4}+1}$:
+Diese entspricht folgender Berechnung im $\nicefrac{\F_{256}[x]}{x^{4}+1}$:
 \begin{gather*}
   [e^{(0,s)}, e^{(1,s)}, e^{(2,s)}, e^{(3,s)}] =
-     [d^{(0,s)}, d^{(1,s)}, d^{(2,s)}, d^{(3,s)}] \otimes [02\:01\:01\:03]
+      [03, 01, 01, 02] \otimes [d^{(0,s)}, d^{(1,s)}, d^{(2,s)}, d^{(3,s)}]
 \end{gather*}
-Matrixschreibweise:
-\begin{align*}
+Die Matrixschreibweise für die Operation $\otimes$ (\autoref{sec:f256x}) ergibt
+\begin{align}
+  \notag
   \begin{pmatrix}
-    e^{(0,s)}\\ e^{(1,s)},\\ e^{(2,s)},\\ e^{(3,s)}
+    e^{(0,s)}\\ e^{(1,s)}\\ e^{(2,s)}\\ e^{(3,s)}
   \end{pmatrix} &=
      \begin{pmatrix}
-       02 (d^{(0,s)}\oplus d^{(1,s)}) \oplus d^{(1,s)} \oplus
-       d^{(2,s)} \oplus d^{(3,s)}\\
-       02 (d^{(1,s)} \oplus d^{(2,s)}) \oplus d^{(0,s)} \oplus
-       d^{(2,s)} \oplus d^{(3,s)}\\
-       02 (d^{(2,s)} \oplus d^{(3,s)}) \oplus d^{(0,s)} \oplus
-       d^{(1,s)} \oplus d^{(3,s)}\\
-       02 (d^{(3,s)} \oplus d^{(0,s)}) \oplus d^{(0,s)} \oplus
-       d^{(1,s)} \oplus d^{(2,s)}
-     \end{pmatrix}\\
-  &= \begin{pmatrix}
        02& 03& 01& 01\\
        01& 02& 03& 01\\
        01& 01& 02& 03\\
@@ -3460,26 +3458,77 @@ Matrixschreibweise:
      \end{pmatrix} \cdot
      \begin{pmatrix}
        d^{(0,s)}\\ d^{(1,s)}\\ d^{(2,s)}\\ d^{(3,s)}
+     \end{pmatrix}\\
+  \label{eq:aes-s32}
+  &= \begin{pmatrix}
+       02\odot (d^{(0,s)}\oplus d^{(1,s)}) \oplus d^{(1,s)} \oplus
+       d^{(2,s)} \oplus d^{(3,s)}\\
+       02\odot (d^{(1,s)} \oplus d^{(2,s)}) \oplus d^{(0,s)} \oplus
+       d^{(2,s)} \oplus d^{(3,s)}\\
+       02\odot (d^{(2,s)} \oplus d^{(3,s)}) \oplus d^{(0,s)} \oplus
+       d^{(1,s)} \oplus d^{(3,s)}\\
+       02\odot (d^{(3,s)} \oplus d^{(0,s)}) \oplus d^{(0,s)} \oplus
+       d^{(1,s)} \oplus d^{(2,s)}
      \end{pmatrix}
-\end{align*}
+\end{align}
 
-Die praktische Umsetzung erfolgt wieder mit Hilfe eines Table-lookups.
+Die praktische Umsetzung in mit einer lookup-table ist nicht möglich, da für
+die $2^{32}$ möglichen Eingabewerte je 32~Bit Speicherplatz benötigt werden,
+was 127\,Gigabit entspricht, was sich praktisch nur schwer umsetzen lässt.
+
+\begin{figure}
+  \centering
+  \input{aes-s32.pdf_t}
+  \caption{Schematische Darstellung der $S$-Box $S_{32}$ für den Column-Mix im
+    AES}
+  \label{fig:s32}
+\end{figure}
+
+\begin{gather}
+  \label{eq:xtime}
+  \mathit{xtime}(p_{7}p_{6}\dotso p_{0}) =
+     \begin{cases}
+       \pi_{6}\pi_{5}\pi_{4}\pi_{3}\:\pi_{2}\pi_{1}\pi_{0} 0&\colon \pi_{7}=0\\
+       (\pi_{6}\pi_{5}\pi_{4}\pi_{3}\:\pi_{2}\pi_{1}\pi_{0} 0) \oplus (0001\,1011)&
+       \colon \pi_{7} = 1
+     \end{cases}
+\end{gather}
+
+Aber durch eine geschickte Umordnung der Operanten, wie es in
+\autoref{eq:aes-s32} geschehen ist, kann man eine sehr symmetrische Struktur
+\autoref{fig:s32} erreichen. Die Funktion $xtime\colon\F_{256}\rightarrow
+\F_{256}$ (\autoref{eq:xtime}) berechnet dabei für ein $p\in\F_{256}$ das
+Produkt
+\begin{align*}
+  02\odot p &= x \odot p(x)
+     = x \cdot (\pi_{7}x^{7}+\dotsb+ \pi_{1}x + \pi_{0}) \pmod{m(x)}\\
+     &= \pi_{7} x^{8} + \pi_{6}x^{7} + \dotsb+ \pi_{1}x^{2} + \pi_{0}x
+     \pmod{x^{8}+x^{4}+x^{3}+x^{1}+1}
+\end{align*}
+Die Polynomdivision ergibt (nach einem Schritt) das Restpolynom
+\begin{multline*}
+  \pi_{6}x^{7} + \pi_{5} x^{6} + \pi_{4}x^{5} + (\pi_{3}\oplus \pi_{7})x^{4}
+     + (\pi_{2}\oplus \pi_{7})x^{3} + \pi_{1}x^{2} + (\pi_{0}\oplus\pi_{7})x
+     + \pi_{7}\\
+  = [\pi_{6}, \pi_{5}, \pi_{4}, (\pi_{3}\oplus\pi_{7}),
+     (\pi_{2}\oplus\pi_{7}), \pi_{1}, (\pi_{0}\oplus\pi_{7}), \pi_{7}]
+\end{multline*}
 
 \subsection{Struktur des Entschlüsselungsalgorithmus}
 
 Da jeder Verschlüsselungsschritt einen Umkehrschritt besitzt ist die
 Entschlüsselung der Nachricht gesichert:
 \begin{enumerate}
- \item $(\text{Key-Add})^{-1} = \text{Key-Add}$ ist einfach ein \texttt{xor}
+ \item Key-Add$^{-1} = $Key-Add ist einfach ein \texttt{xor}
   mit demselben Schlüssel.
 
- \item $(\text{Byte-Sub})^{-1}$ existiert, da die affine Abbildung eine
+ \item Byte-Sub$^{-1}$ existiert, da die affine Abbildung eine
   Umgekehrabbildung besitzt und das Inverse des Inversen das ursprüngliche
   Element im Körper liefert.
 
- \item $(\text{Row-Shift})^{-1}$ ist einfach eine Rotation nach rechts.
+ \item Row-Shift$^{-1}$ ist einfach eine Rotation nach rechts.
 
- \item $(\text{Column-Shift})^{-1}$ existiert, da $a(x) = 02+01x+ 01x^{2} +
+ \item Column-Shift$^{-1}$ existiert, da $a(x) = 02+01x+ 01x^{2} +
   03x^{3}$ im Ring $\nicefrac{\F_{256}[x]}{x^{4}+1}$ das inverse Polynom
   $a^{-1}(x)$ hat.
 \end{enumerate}
@@ -3554,39 +3603,39 @@ $K_{B}=\alpha^{b}\pmod{p}$~(Bob).
     \hline
     Schritt& \multicolumn{1}{c|}{Alice}& Kanal& \multicolumn{1}{c|}{Bob}\\
     \hline
-    1.& wählt zufällig 2 große Zahlen~$x,y$, berechnet $x\op y$; $x$ privat,
-       $y,x\op y$ öffentlich
+    1.& wählt zufällig 2 große Zahlen~$x,y$, berechnet $x\circ y$; $x$ privat,
+       $y,x\circ y$ öffentlich
        &&\\
-    2.& & $\xrightarrow{y,x\op y}$& \\
-    3.& & & wählt zufällig eine große Zahl~$z$, berechnet $y\op z$; $z$
-       privat, $y\op z$ öffentlich\\
-    4.& & $\xleftarrow{y\op z}$& \\
-    5.& berechnet $K_{A}=x\op(y\op z)$& & berechnet $K_{B}=(x\op y)\op z$
+    2.& & $\xrightarrow{y,x\circ y}$& \\
+    3.& & & wählt zufällig eine große Zahl~$z$, berechnet $y\circ z$; $z$
+       privat, $y\circ z$ öffentlich\\
+    4.& & $\xleftarrow{y\circ z}$& \\
+    5.& berechnet $K_{A}=x\circ(y\circ z)$& & berechnet $K_{B}=(x\circ y)\circ z$
   \end{tabularx}
   \caption{Austausch eines geheimen Schlüssels in der Öffentlichkeit nach
     Rivest und Shermann}
 \end{table}
 
-Alice wählt zufällig zwei große Zahlen~$x$ und $y$ und berechnet $x\op y$,
-wobei $\op$ eine zweistellige und assoziative Operation ist, die stark "`nicht
-invertierbar"' ist, d.\,h. die Kenntnis von $x\op y$ und $y$ erlaubt keine
+Alice wählt zufällig zwei große Zahlen~$x$ und $y$ und berechnet $x\circ y$,
+wobei $\circ$ eine zweistellige und assoziative Operation ist, die stark "`nicht
+invertierbar"' ist, d.\,h. die Kenntnis von $x\circ y$ und $y$ erlaubt keine
 Rückschlüsse auf~$x$. Die Zahl~$x$ bleibt privat und die Zahlen~$y$ und
-$x\op y$ übermittelt sie an Bob, wobei die Zahlen öffentlich zugänglich seien
+$x\circ y$ übermittelt sie an Bob, wobei die Zahlen öffentlich zugänglich seien
 können. Bob wählt sich dann zufällig eine große Zahl~$z$, die privat bleibt,
-und berechnet $y\op z$. Dieses Ergebnis teilt er Alice mit und auch hier kommt
+und berechnet $y\circ z$. Dieses Ergebnis teilt er Alice mit und auch hier kommt
 es nicht auf die Geheimhaltung an. Somit haben beide jetzt das gemeinsame
-Geheimnis $x\op y\op z$
+Geheimnis $x\circ y\circ z$
 \begin{gather*}
-  K_{A} = x\op(y\op z) = (x\op y)\op z = K_{B}
+  K_{A} = x\circ(y\circ z) = (x\circ y)\circ z = K_{B}
 \end{gather*}
 
 \help{Ist bei beiden Verfahren wirklich sichergestellt, dass man aus den
   öffentlichen Größen keine Rückschlüsse auf das Geheimnis ziehen kann?}
 
-\subsection{Das Konzept der Einwegfunktion}
+\section{Das Konzept der Einwegfunktion}
 \label{sec:rsa-math}
 
-Die Frage ist nun, ob es denn überhaupt eine solche Operation~$\op$ gibt und
+Die Frage ist nun, ob es denn überhaupt eine solche Operation~$\circ$ gibt und
 wenn ja, wie sieht diese aus? In der Komplexitätstheorie gibt es das Konzept
 der Einwegfunktion, das Funktionen beschreibt, die einfach zu berechnen, aber
 "`schwer"' zu invertieren sind.
@@ -3595,24 +3644,27 @@ der Einwegfunktion, das Funktionen beschreibt, die einfach zu berechnen, aber
   Eine Funktion $f\colon\N\rightarrow\N$ ist eine \highl{Einwegfunktion}
   \gdwdef sie die folgenden Eigenschaften besitzt
   \begin{itemize}
-   \item $f$ ist im worst case in Polynomialzeit zu berechnen und
+   \item $f$ ist im worst case in Polynomialzeit zu berechnen, d.\,h.
+    $f\in\FP$ und 
    \item für fast alle $y\in W_{f}$ gibt es keinen probalistischen
     Algorithmus, der im average case ein zugehöriges Urbild~$x$ mit $f(x)=y$
-    in Polynomialzeit berechnet.
+    in Polynomialzeit berechnet, d.\,h. $f^{-1}\notin\FP$.
   \end{itemize}
 \end{defini}
 
-Aus der Komplexitätstheorie ist bekannt, dass eine solche Einwegfunktion nur
-dann existiert, wenn $\mathrm{P}\ne \mathrm{NP}$ ist.
+\begin{bemerk}
+  \label{bem:1}
+  Aus der Komplexitätstheorie ist bekannt, dass eine solche Einwegfunktion nur
+  dann existiert, wenn $\mathrm{P}\ne \mathrm{NP}$ ist.
+\end{bemerk}
 
 % 10.1.
 
 \subsection{Modulare Exponentiation mit fester Basis und festem Modul}
-
-$f_{a,n}$ sei im folgende wie folgt definiert:
+\label{sec:diskrlog}
+Im Folgenden sei $f_{a,n}\colon\Z_{n}\mapsto\Z_{n}$ wie folgt definiert:
 \begin{gather*}
-  f_{a,n}\colon\Z_{n} \mapsto \Z_{n}\qquad\text{wobei}\qquad
-     f_{a,n}(m) := a^{m} \mod n
+  f_{a,n}(m) := a^{m} \mod n
 \end{gather*}
 
 \begin{satz}\label{satz:1}
@@ -3620,8 +3672,8 @@ $f_{a,n}$ sei im folgende wie folgt definiert:
   Klasse~$\FP$ der in Polynomialzeit berechenbaren Funktionen.
 
   \begin{proof}
-    rekursive Prozedur
-    \begin{verbatim}
+    Folgende rekursive Prozedur berechnet $f_{a,n}(m)$:
+    \begin{Verbatim}[gobble=4]
     function (a,m,n)
     begin
         if m = 0
@@ -3629,64 +3681,65 @@ $f_{a,n}$ sei im folgende wie folgt definiert:
         else
         begin
             if m gerade
-            then return (function(a, m/z, n) ** 2) mod n
+            then return (function(a, m/2, n) ** 2) mod n
             else return (function(a, m-1, n) * a) mod n
         end
     end
-    \end{verbatim}
+    \end{Verbatim}
 
     Dieser Algorithmus erfordert zwischen $\log_{2}m$ und $2\cdot\log_{2}m$
-    Durchläufe, also $O(\log_{2}m) = O(\abs{m})$. Das heißt man benötigt
-    $O(\abs{m})$ vielen Multiplikationen, d.\,h. dies ist ein
+    Durchläufe und hat somit eine Laufzeit von $O(\log_{2}m) = O(\abs{m})$. Da
+    ist einzelnen Operationen mit $O(1)$ angenommen werden, ist dies ein
     Polynomialzeitalgorithmus.
   \end{proof}
 \end{satz}
 
-Ansatz: Die inverse "`Funktion"' $f^{-1}_{a,n}$ bezeichnen wir als
-\highl{diskreter Logarithmus}. Gegeben ist $a$, $n$ und ein Wert $x$, Aufgabe
-ist: Bestimmt $m$, so dass $a^{m}\mod n = x$, falls ein solches $m$ existiert.
+\begin{defini}
+  Als \highl{diskreten Logarithmus} bezeichnet man die inverse
+  Abbildung~$f^{-1}_{a,n}$, die zu einem gegebenen Wert~$y$ einen Wert~$m$
+  bestimmt, so dass $a^{m}\mod n = y$, falls ein solches $m$ existiert.
+\end{defini}
 
-Jedoch exstiert die inverse Funktion im allgemeinen Fall nicht, da $f_{a,n}$
-nicht eineindeutig ist.
-\begin{bsp}[Diskreter Logarithmus]
-  $f_{5,21}(m) = 16$. Es gibt zwei Lösungen für $m$, nämlich $m_{1}=4$:
-  $5^{4} = 625 = 16 \mod 21$ und $m_{2} = 10$: $5^{10} = 9\,765\,625 = 16\mod 21$
-\end{bsp}
-
-\begin{bemerk}
-  Wann ist $f_{a,n}$ eineindeutig bzw. wann existiert der diskrete Logarithmus?
-\end{bemerk}
+Diese Abbildung~$f^{-1}_{a,n}$ ist jedoch \textit{keine} Funktion, da
+$f_{a,n}$ nicht injektiv ist. Zum Beispiel ist das Ergebnis von $f_{5,21}$ für
+$m_{1}=4$ und $m_{2}=10$ gleich.
+\begin{gather*}
+  f_{5,21}(5) = 5^{4}\mod{21} = 16 = 5^{10}\mod{21} = f_{5,21}(10)
+\end{gather*}
 
 \begin{dogma}
-  Wir glauben, die Funktion $f_{a,n}$ ist nicht $\FP$-invertierbar.
-
-  Könnten wir beweisen, dass $f_{a,n}$ nicht $\FP$-invertierbar ist, dann
-  könnten wir zeigen, dass es eine echte Einwegfunktion gibt und dann wären
-  nach der letzten Vorlesung $\mathrm{P}=\mathrm{NP}$.
-
-  Also ist $f_{a,n}$ ein Kadidat für eine Einwegfunktion.
+  Wir glauben, dass die Funktion~$f_{a,n}$ nicht $\FP$-invertierbar und damit
+  ein Kandidat für eine Einwegfunktion ist.
 \end{dogma}
+
+Könnten wir beweisen, dass $f_{a,n}$ nicht $\FP$-invertierbar ist, dann wäre
+damit eine echte Einwegfunktion gefunden und man könnte nach \autoref{bem:1}
+zeigen, dass $\mathrm{P}\ne\mathrm{NP}$ ist.
 
 \begin{bemerk}
   Wenn $f$ eine Einwegfunktion ist, dann kann auch der \textit{legitimierte}
-  Empfänger Bob aus dem Kryptogramm $c=f(m)$ die Botschaft $m$ nicht in
+  Empfänger aus dem Kryptogramm $c=f(m)$ die Botschaft $m$ nicht in
   Polynomialzeit zurückrechnen.
 \end{bemerk}
 
 \subsection{Falltür-Einwegfunktionen}
 
 \begin{defini}
-  (nach Deffie/Helman) Eine Zahlenfunktion~$f\colon X\rightarrow Y$ heißt
+  Eine Zahlenfunktion~$f\colon X\rightarrow Y$ heißt
   \highl{Falltür-Einwegfunktion} (engl. trap door one way function) \gdwdef
-  \begin{enumerate}
-   \item Die Funktion ist in Polynomialzeit berechenbar und $f$ ist
-    "`ehrlich"' (Das Ergebnis der Umkehrfunktion ist in Polynomialzeit
-    aufschreibbar); $f\in\FP$
-   \item $f$ ist mit der Falltürinformation; $\exists g\in\FP \exists
-    \text{Falltürinformation~} t \forall y\in W_{f}\colon f(g(y,T)) = y$
-    (d.\,h. $f$ ist in Polynomialzeit umkehrbar)
-   \item $f$ ist ohne die Falltürinformation nicht $\FP$-invertierbar
-  \end{enumerate}
+  sie die folgenden Bedingungen erfüllt:
+  \begin{itemize}
+   \item Die Funktion ist in Polynomialzeit berechenbar; $f\in\FP$
+   \item $f$ ist mit der Falltürinformation in Polynomialzeit umkehrbar;
+    \begin{gather*}
+      \exists g\in\FP~\exists \text{\:Falltürinformation\:}T~
+         \forall y\in W_{f}\colon f\bigl(g(y,T)\bigr) = y
+    \end{gather*}
+   \item $f$ ist ohne die Falltürinformation nicht in Polynomialzeit
+    umkehrbar; $f$ ist nicht $\FP$-invertierbar
+  \end{itemize}
+
+  Diese Definition geht auf Deffie und Helman zurück.
 \end{defini}
 
 \begin{bemerk}
@@ -3696,11 +3749,15 @@ nicht eineindeutig ist.
 
 \subsection{Modulare Exponentation mit festem Exponenten und festem Modul}
 
-$g_{n,m}\colon \Z_{n} \mapsto \Z_{n}$ mit $g_{n,m}(a) := a^{m} \mod n$.
-(vergleiche mit der Definition von $f_{a,n}$)
+Analog zur Definition von $f_{a,n}$ im \autoref{sec:diskrlog} sei im Folgenden
+$g_{n,m}\colon \Z_{n} \mapsto \Z_{n}$ so definiert
+\begin{gather*}
+  g_{n,m}(a) := a^{m} \mod n
+\end{gather*}
 
 \begin{satz}
-  $g_{n,m}\in\FP$
+  Die oben definierte Funktion $g_{n,m}$ ist in Polynomialzeit berechenbar,
+  d.\,h. $g_{n,m}\in\FP$.
 
   \begin{proof}
     Der rekursive Algorithmus aus \autoref{satz:1}.
